Refs #9864 All functionality working and word wrap problem solved

--- a/css/event.css
+++ b/css/event.css
@@ -1,10 +1,9 @@
 
-/*body{
+body{
 	
-	margin: 20px;
-	background-image: url("../img/bg.jpg");
+
 	word-wrap:break-word;
-}*/
+}
 
 #container{
 	margin-left	: 200px;
